# qwen3-vl-computer-use-augmentation-generator

./: .gitignore  CODE_QUALITY.md  Makefile  README.md  agents.md  pyproject.toml  system.md
.claude/: cto-progress.md  progress.md
.claude/agents/: from-root-agent-text-verification-20251217_141500.md
.claude/communication/: from-annotator-20251221.md
.claude/implementation/: progress.md
.claude/plans/: annotation-driven-scaffolding.md  manifest-format-20251221.md  task-accuracy-improvement-plan.md
.claude/research/: annotation-driven-scaffolding.md  manifest-format-20251221.md
.claude/todos/: 20251217-system-md-setup.md
.github/workflows/: publish.yml
docs/: QWEN3-VL.md
scripts/: build-deploy.sh  chandra_ocr_modal.py  deploy_chandra_ocr.sh  release-major.sh  release-minor.sh  release-patch.sh
src/cudag/: __init__.py
src/cudag/annotation/: config.py  loader.py  scaffold.py
src/cudag/cli/: main.py  new.py
src/cudag/core/: __init__.py  dataset.py  grid.py  iconlist_task.py  task.py  taskbar.py  utils.py
src/cudag/modal_apps/: preprocess.py
src/cudag/prompts/: SYSTEM_PROMPT.txt  __init__.py  system.py  tools.py
src/cudag/templates/scripts/: generate.sh  pre-commit.sh
tests/: test_task.py
